Refactor GameShell to extend Canvas instead of Applet, updating lifecycle methods for compatibility. Introduce key code mapping methods for cleaner key event handling.
Update MouseTracking to use LockSupport for thread sleeping, improving responsiveness.

Revise SignLink to remove Applet dependencies, enhance URL handling, and streamline audio processing with try-with-resources for better resource management.